# src/main/resources/static/codegen/built-cas2bail-api-spec.yml
@@ -7,6 +7,37 @@ info:
 servers:
   - url: /cas2bail
 paths:
+  /toby:
+    get:
+      tags:
+        - Reports
+      summary: Returns a spreadsheet showing how many days per month each bedspace spent in which state and the overall occupancy rate.
+      parameters:
+        - name: X-Service-Name
+          in: header
+          required: true
+          description: Only bookings for this service will be returned
+          schema:
+            $ref: '#/components/schemas/ServiceName'
+        - name: month
+          in: query
+          required: true
+          description: Only bookings for this month will be returned - must be provided with year
+          schema:
+            type: integer
+      responses:
+        200:
+          description: successful operation
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/GarethObject'
+        401:
+          $ref: '#/components/responses/401Response'
+        403:
+          $ref: '#/components/responses/403Response'
+        500:
+          $ref: '#/components/responses/500Response'
   /applications:
     post:
       tags:
@@ -73,7 +104,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Cas2ApplicationSummary'
+                  $ref: '#/components/schemas/GarethObject'
           headers:
             X-Pagination-CurrentPage:
               $ref: '#/components/headers/X-Pagination-CurrentPage'
